Fixed issues with text align right in navigation during animation. Cleaned code

--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -101,15 +101,19 @@ header {
 	display: flex;
 	justify-content: space-between;
 	width: 80%;
-	/* padding-left: 49px; */
 	padding-right: 82px;
+}
+
+header nav {
+	display: flex;
+	justify-content: space-around;
+	padding-left: 50px;
 }
 
 header nav a {
 	padding: 10px;
 	color: gray;
 	font-size: 14px;
-	padding-left: 57px;
 }
 
 @keyframes increase {
@@ -127,6 +131,7 @@ header nav a {
 		border: 1px dotted peru;
 		border-radius: 5px;
 		background-color: papayawhip;
+		padding: 5 auto;
 	}
 }
 
@@ -148,7 +153,6 @@ a:hover {
 
 .title {
 	width: 950px;
-	/* margin: 0 auto; */
 	display: flex;
 	justify-content: space-evenly;
 	align-items: center;
@@ -209,7 +213,6 @@ hr.one {
 	justify-content: flex-start;
 	align-content: space-around;
 	padding-top: 10px;
-	/* margin-left: 75px; */
 	margin: 0 auto;
 }
 
@@ -293,9 +296,6 @@ footer {
 	display: flex;
 	flex-direction: column;
 	align-items: flex-start;
-	/* justify-content: center; */
-	/* padding: 10px; */
-	/* margin-left: 63px; */
 	margin: 0 auto;
 	margin-top: 27px;
 }
@@ -342,7 +342,6 @@ div.header-img-services > img.services-header-img {
 .about-services {
 	margin-top: 20px;
 	margin-bottom: 20px;
-	/* margin-left: 74px;  */
 	display: flex;
 	flex-direction: column;
 	align-items: flex-start;
@@ -359,13 +358,10 @@ div.header-img-services > img.services-header-img {
 .services-categories {
 	width: 950px;
 	margin: 0 auto;
-	/* margin-left: 99px; */
-	/* margin-right: 0; */
 	margin-top: 40px; 
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: space-between;
-	/* align-content: center; */
 }
 
 .services-categories > div {
@@ -384,37 +380,31 @@ div.header-img-services > img.services-header-img {
 
 .digital-design {
 	width: 47%;
-	/* margin-right: 40px; */
 	margin-bottom: 50px;
 }
 
 .UX-UI {
 	width: 47%;
-	/* margin-right: 25px; */
 	margin-bottom: 50px;
 }
 
 .digital-marketing {
 	width: 47%;
-	/* margin-right: 25px; */
 	margin-bottom: 50px;
 }
 
 .web-development {
 	width: 47%;
-	/* margin-right: 25px; */
 	margin-bottom: 50px;
 }
 
 .ios-development {
 	width: 47%;
-	/* margin-right: 25px; */
 	margin-bottom: 50px;
 }
 
 .android-development {
 	width: 47%;
-	/* margin-right: 25px; */
 	margin-bottom: 50px;
 }
 
